--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,8 +15,10 @@ jobs:
         include:
           - name: x64
             target: node18-linux-x64
+            runner: ubuntu-24.04
           - name: arm64
             target: node18-linux-arm64
+            runner: ubuntu-24.04-arm   
     steps:
       - uses: actions/checkout@v4
 
